tests/base/parser/bad/exps/exp_t-match-spid-with-bar-cid-type.scilexp
let a = None {Bool} in
match a with
| _ -> True
end
